# ginger-shared-rs

./: CHANGELOG.md  Cargo.toml  README.md  metadata.toml  releaser.toml  services.toml
.github/workflows/: CI.yml  ci.yml
src/: lib.rs  rocket_models.rs  rocket_utils.rs  utils.rs
