[package]
description = "Common shared code for Rust code base"
edition = "2021"
license = "MIT"
name = "ginger-shared-rs"
version = "0.14.0-nightly.0"

[dependencies]
clap = {version = "4.3.10", features = ["derive"]}
serde = {version = "1.0.166", features = ["derive"]}
toml = "0.8.14"

[package.metadata]
organization = "ginger-society"
