[package]
description = "Common shared code for Rust code base"
edition = "2021"
license = "MIT"
name = "ginger-shared-rs"
version = "0.24.0-nightly.0"

[dependencies]
clap = {version = "4.3.10", features = ["derive"]}
dirs = "5.0.1"
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0"
toml = "0.8.14"

[package.metadata]
organization = "ginger-society"
